# ml-exercises

./: .gitignore  CMakeLists.txt
dataset/: clear_data.sh  download_data.sh
include/mlexerices/: algorithm.hpp  io.hpp
src/: LinearRegression.cpp
utest/: io.cpp
